--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,6 +68,7 @@ golem-wasm-ast = {workspace = true, optional = true, default-features = false, f
 golem-wasm-rpc = { workspace = true, optional = true, default-features = false, features = [
     "typeinfo",
 ]}
+uuid = { workspace = true, optional = true }
 anyhow = { workspace = true, features = ['std'] }
 target-lexicon = { workspace = true }
 listenfd = { version = "1.0.0", optional = true }
@@ -145,6 +146,7 @@ golem-wasm-ast = {workspace = true, default-features = false, features = [
 golem-wasm-rpc = { workspace = true, default-features = false, features = [
   "typeinfo",
 ]}
+uuid = { workspace = true }
 
 [target.'cfg(windows)'.dev-dependencies]
 windows-sys = { workspace = true, features = ["Win32_System_Memory"] }
@@ -411,7 +413,7 @@ golem-wasm-ast = { path = "../../golem/wasm-ast", version = "=0.0.0", default-fe
     "bincode",
 ] }
 golem-wasm-rpc = { path = "../../golem/wasm-rpc", version = "=0.0.0", default-features = false, features = ["typeinfo"] }
-
+uuid = { version = "1.2.2", features = ["v4"] }
 # =============================================================================
 #
 # Features for the Wasmtime CLI executable
@@ -536,6 +538,7 @@ wast = ["dep:wasmtime-wast"]
 config = ["cache"]
 compile = ["cranelift"]
 run = [
+  "dep:uuid",
   "dep:golem-rib-repl",
   "dep:golem-wasm-ast",
   "dep:golem-wasm-rpc",
