use wasmtime for real execution

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,6 +60,7 @@ wasmtime-wasi-threads = { workspace = true, optional = true }
 wasmtime-wasi-http = { workspace = true, optional = true }
 clap = { workspace = true }
 clap_complete = { workspace = true, optional = true }
+golem-rib = { workspace = true, optional = true }
 golem-rib-repl = { workspace = true, optional = true }
 golem-wasm-ast = {workspace = true, optional = true, default-features = false, features = [
     "analysis",
@@ -138,6 +139,7 @@ wasmtime-test-macros = { path = "crates/test-macros" }
 pulley-interpreter = { workspace = true, features = ["disas"] }
 wasm-encoder = { workspace = true }
 cranelift-native = { workspace = true }
+golem-rib = { workspace = true}
 golem-rib-repl = { workspace = true }
 golem-wasm-ast = {workspace = true, default-features = false, features = [
   "analysis",
@@ -408,6 +410,7 @@ base64 = "0.22.1"
 termcolor = "1.4.1"
 # depending on https://github.com/golemcloud/golem/pull/1579/files
 golem-rib-repl = { path = "../../golem/golem-rib-repl", version = "=0.0.0" }
+golem-rib = { path = "../../golem/golem-rib", version = "=0.0.0" }
 golem-wasm-ast = { path = "../../golem/wasm-ast", version = "=0.0.0", default-features = false, features = [
     "analysis",
     "bincode",
@@ -539,6 +542,7 @@ config = ["cache"]
 compile = ["cranelift"]
 run = [
   "dep:uuid",
+  "dep:golem-rib",
   "dep:golem-rib-repl",
   "dep:golem-wasm-ast",
   "dep:golem-wasm-rpc",
